--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "dateformat": "^2.0.0",
+    "material-ui": "^0.19.0",
     "moment": "^2.18.1",
     "moment-random": "^1.0.2",
     "numeral": "^2.0.6",
