--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "numeral": "^2.0.6",
     "prop-types": "^15.5.10",
