--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "dependencies": {
     "lodash": "^4.17.4",
+    "material-ui": "^0.19.1",
     "moment": "^2.18.1",
-    "nuka-carousel": "^2.2.1",
+    "nuka-carousel": "^2.3.0",
     "numeral": "^2.0.6",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
