--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -25,7 +25,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "share": "rimraf src/App/shared && mkdir src/App/shared && cpx \"../shared/**/*.{ts,tsx,js,jsx,json,ttf,png}\" src/App/shared",
-    "share:watch": "rimraf src/App/Shared && mkdir src/App/Shared && cpx \"../shared/**/*.{ts,tsx,js,jsx,json,ttf,png}\" src/App/Shared --watch"
+    "share:watch": "rimraf src/App/Shared && mkdir src/App/Shared && cpx \"../shared/**/*.{ts,tsx,js,jsx,json,ttf,png,svg}\" src/App/Shared --watch"
   },
   "devDependencies": {
     "concurrently": "^3.5.0",
