--- a/packages/HeroTravelerMobile/ios/HeroTravelerMobile/Info.plist
+++ b/packages/HeroTravelerMobile/ios/HeroTravelerMobile/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>HERO Traveler</string>
+	<string>Hero Traveler Beta</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.0.55</string>
+	<string>0.0.56</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleURLTypes</key>
@@ -26,12 +26,12 @@
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>fb1780202858957884</string>
-				<string>com.rehashstudio.herotraveler</string>
+				<stringcom.herotraveler.herotraveler-beta</string>
 			</array>
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>25</string>
+	<string>27</string>
 	<key>FacebookAppID</key>
 	<string>1780202858957884</string>
 	<key>FacebookDisplayName</key>
@@ -140,6 +140,7 @@
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
+		<string>gamekit</string>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
