--- a/packages/HeroTravelerMobile/package.json
+++ b/packages/HeroTravelerMobile/package.json
@@ -20,8 +20,8 @@
     "android:devices": "$ANDROID_HOME/platform-tools/adb devices",
     "android:logcat": "$ANDROID_HOME/platform-tools/adb logcat *:S ReactNative:V ReactNativeJS:V",
     "android:shake": "$ANDROID_HOME/platform-tools/adb devices | grep '\\t' | awk '{print $1}' | sed 's/\\s//g' | xargs -I {} $ANDROID_HOME/platform-tools/adb -s {} shell input keyevent 82",
-    "dev-test-link-reset": "xcrun simctl openurl booted \"com.rehashstudio.herotraveler://resetpassword/a6671bb4-73df-4110-8a7b-c1f1dd579707\"",
-    "dev-test-link-email": "xcrun simctl openurl booted \"com.rehashstudio.herotraveler://emailverify/dc24a446-3a76-477a-8f17-255dfbaf0892\"",
+    "dev-test-link-reset": "xcrun simctl openurl booted \"com.herotraveler.herotraveler-beta://resetpassword/a6671bb4-73df-4110-8a7b-c1f1dd579707\"",
+    "dev-test-link-email": "xcrun simctl openurl booted \"com.herotraveler.herotraveler-beta://emailverify/dc24a446-3a76-477a-8f17-255dfbaf0892\"",
     "share": "rimraf App/Shared && mkdir App/Shared && cpx \"../shared/**/*.{ts,tsx,js,jsx,json,ttf,png}\" App/Shared",
     "share:watch": "rimraf App/Shared && mkdir App/Shared && cpx \"../shared/**/*.{ts,tsx,js,jsx,json,ttf,png}\" App/Shared --watch"
   },
