--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^15.6.1",
     "react-flexbox-grid": "^1.1.3",
     "react-google-maps": "next",
+    "react-image-cropper": "^1.1.1",
     "react-ios-switch": "^0.1.12",
     "react-modal": "^2.2.2",
     "react-places-autocomplete": "^5.4.3",
