--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -18,9 +18,11 @@
     "react-ios-switch": "^0.1.12",
     "react-modal": "^2.2.2",
     "react-places-autocomplete": "^5.4.3",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.1.1",
     "react-scripts": "1.0.10",
     "redraft": "^0.8.0",
+    "redux": "^3.7.2",
     "styled-components": "^2.1.1"
   },
   "scripts": {
