--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "apisauce": "^0.14.1",
+    "history": "^4.7.2",
     "lodash": "^4.17.4",
     "material-ui": "^0.19.1",
     "moment": "^2.18.1",
@@ -22,6 +23,7 @@
     "react-places-autocomplete": "^5.4.3",
     "react-redux": "^5.0.2",
     "react-router-dom": "^4.1.1",
+    "react-router-redux": "next",
     "react-scripts": "1.0.10",
     "redraft": "^0.8.0",
     "redux": "^3.6.0",
