--- a/packages/express-api/package.json
+++ b/packages/express-api/package.json
@@ -27,6 +27,7 @@
     "body-parser": "^1.17.1",
     "cloudinary": "^1.9.0",
     "compose-middleware": "^2.2.0",
+    "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "knox": "^0.9.2",
