--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -13,6 +13,7 @@
     "numeral": "^2.0.6",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
+    "react-cookie": "^2.1.1",
     "react-day-picker": "^6.1.0",
     "react-dom": "^15.6.1",
     "react-flexbox-grid": "^1.1.3",
