--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -24,6 +24,7 @@
     "react-image-cropper": "^1.1.1",
     "react-ios-switch": "^0.1.12",
     "react-modal": "^2.2.2",
+    "react-onclickoutside": "^6.7.0",
     "react-places-autocomplete": "^5.4.3",
     "react-redux": "^5.0.2",
     "react-router-dom": "^4.1.1",
