--- a/packages/HeroTravelerMobile/package.json
+++ b/packages/HeroTravelerMobile/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-react-native": "^2.3.2",
     "format-json": "^1.0.3",
     "immutable": "3.7.6",
+    "keymirror": "0.1.1",
     "lodash": "^4.17.2",
     "moment": "^2.18.1",
     "normalizr": "^3.2.2",
@@ -71,7 +72,6 @@
     "react-native-splash-screen": "^2.0.0",
     "react-native-vector-icons": "^4.0.0",
     "react-native-version-number": "^0.1.2",
-    "react-native-video": "https://github.com/react-native-community/react-native-video",
     "react-native-webview-bridge-updated": "https://github.com/rwoody/react-native-webview-bridge#container-style",
     "react-native-zss-rich-text-editor": "https://github.com/rwoody/react-native-zss-rich-text-editor#insert-video",
     "react-redux": "^5.0.2",
