--- a/packages/HeroTravelerMobile/ios/HeroTravelerMobile.xcodeproj/xcshareddata/xcschemes/HeroTravelerMobile.xcscheme
+++ b/packages/HeroTravelerMobile/ios/HeroTravelerMobile.xcodeproj/xcshareddata/xcschemes/HeroTravelerMobile.xcscheme
@@ -111,7 +111,7 @@
          <EnvironmentVariable
             key = "OS_ACTIVITY_MODE"
             value = "disable"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </EnvironmentVariable>
       </EnvironmentVariables>
       <AdditionalOptions>
