--- a/packages/cms/package.json
+++ b/packages/cms/package.json
@@ -1,38 +1,58 @@
 {
-  "name": "cms",
-  "version": "1.0.4",
-  "description": "Content Management System for the Herotraveller App",
+  "name": "@hero/ht-express-api",
+  "private": true,
+  "version": "0.0.6-beta",
+  "description": "HERO Traveler application API",
   "main": "index.js",
   "scripts": {
-    "test": "test",
-    "watch": "NODE_ENV='development' && nodemon ./src/index.js",
-    "start": "node ./src/index.js"
+    "build": "babel src -d dist",
+    "clean": "rimraf dist",
+    "start": "node dist/index.js",
+    "dev": "nodemon index.js",
+    "deploy": "./ops/deploy.sh",
+    "tail-logs": "./ops/tail_logs.sh"
   },
+  "keywords": [],
   "author": "",
-  "license": "UNLICENSED",
-  "devDependencies": {
-    "nodemon": "^1.11.0"
-  },
+  "license": "ISC",
   "dependencies": {
     "@hero/ht-core": "0.0.36",
-    "@hero/ht-util": "0.0.33",
-    "aws-sdk": "^2.46.0",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "@hero/ht-util": "^0.0.33",
+    "algoliasearch": "^3.23.0",
+    "apn": "^2.1.4",
+    "aws-sdk": "^2.40.0",
     "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-register": "^6.24.1",
+    "bcrypt": "^1.0.2",
+    "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
+    "cloudinary": "^1.9.0",
+    "compose-middleware": "^2.2.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
-    "express-session": "^1.15.2",
-    "jsonwebtoken": "^7.4.0",
-    "lodash": "^4.17.4",
+    "express-session": "^1.15.6",
+    "knox": "^0.9.2",
+    "moment": "^2.17.1",
     "morgan": "^1.8.1",
     "multer": "^1.3.0",
-    "multer-s3": "^2.7.0",
-    "nunjucks": "^3.0.0",
+    "multer-s3": "^2.5.0",
+    "multer-storage-cloudinary": "^2.2.1",
+    "node-cleanup": "^2.1.2",
+    "nunjucks": "^3.0.1",
+    "passport": "^0.3.2",
+    "passport-http": "^0.3.0",
+    "passport-http-bearer": "^1.0.1",
+    "sharp": "^0.17.3",
     "uuid": "^3.0.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.24.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-env": "^1.4.0",
+    "babel-register": "^6.23.0",
+    "dotenv": "^4.0.0",
+    "nodemon": "^1.11.0"
   }
 }
