--- a/packages/cms/package.json
+++ b/packages/cms/package.json
@@ -44,6 +44,7 @@
     "passport": "^0.3.2",
     "passport-http": "^0.3.0",
     "passport-http-bearer": "^1.0.1",
+    "serve-favicon": "^2.4.5",
     "sharp": "^0.17.3",
     "uuid": "^3.0.1"
   },
