--- a/packages/HeroTravelerMobile/android/settings.gradle
+++ b/packages/HeroTravelerMobile/android/settings.gradle
@@ -1,4 +1,8 @@
 rootProject.name = 'HeroTravelerMobile'
+include ':react-native-autogrow-textinput'
+project(':react-native-autogrow-textinput').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-autogrow-textinput/android')
+include ':@hero/react-native-autogrow-textinput'
+project(':@hero/react-native-autogrow-textinput').projectDir = new File(rootProject.projectDir, '../node_modules/@hero/react-native-autogrow-textinput/android')
 include ':react-native-media-meta'
 project(':react-native-media-meta').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-media-meta/android')
 include ':react-native-google-places'
