--- a/packages/HeroTravelerMobile/package.json
+++ b/packages/HeroTravelerMobile/package.json
@@ -26,7 +26,6 @@
     "share:watch": "rimraf App/Shared && mkdir App/Shared && cpx \"../shared/**/*.{ts,tsx,js,jsx,json,ttf,png,svg}\" App/Shared --watch"
   },
   "dependencies": {
-    "@hero/react-native-autogrow-textinput": "3.0.5",
     "algoliasearch": "^3.22.1",
     "algoliasearch-helper": "^2.20.1",
     "apisauce": "^0.10.0",
@@ -35,7 +34,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "concurrently": "^3.5.0",
     "cpx": "^1.5.0",
-    "draft-js": "0.10.1",
+    "draft-js": "0.10",
     "eslint-plugin-react-native": "^2.3.2",
     "format-json": "^1.0.3",
     "immutable": "3.7.6",
@@ -47,13 +46,14 @@
     "prop-types": "^15.5.10",
     "querystringify": "0.0.4",
     "ramda": "^0.23.0",
-    "react": "^15.5.4",
+    "react": "16.2.0",
     "react-mixin": "^3.0.5",
-    "react-native": "~0.42.0",
+    "react-native": "0.53",
     "react-native-animatable": "^1.1.0",
+    "react-native-autogrow-textinput": "5.1.1",
     "react-native-camera": "0.6",
     "react-native-device-info": "^0.10.0",
-    "react-native-draftjs-render": "^1.0.3",
+    "react-native-draftjs-render": "2.4.0",
     "react-native-drawer": "^2.3.0",
     "react-native-fbsdk": "^0.6.0",
     "react-native-fetch-blob": "^0.10.5",
@@ -64,7 +64,7 @@
     "react-native-image-picker": "^0.26.2",
     "react-native-img-cache": "^1.4.0",
     "react-native-keyboard-spacer": "^0.3.1",
-    "react-native-keyboard-tracking-view": "^3.0.13",
+    "react-native-keyboard-tracking-view": "5.1.3",
     "react-native-maps": "~0.13.0",
     "react-native-media-meta": "^0.0.10",
     "react-native-push-notification": "^2.2.1",
@@ -78,7 +78,7 @@
     "react-timer-mixin": "^0.13.3",
     "recompose": "^0.23.5",
     "redux": "^3.6.0",
-    "redux-form": "^6.5.0",
+    "redux-form": "7.2.3",
     "redux-logger": "^2.8.2",
     "redux-persist": "^4.1.0",
     "redux-saga": "^0.14.3",
