--- a/packages/HeroTravelerMobile/package.json
+++ b/packages/HeroTravelerMobile/package.json
@@ -34,6 +34,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "concurrently": "^3.5.0",
     "cpx": "^1.5.0",
+    "create-react-class": "^15.6.3",
     "draft-js": "0.10",
     "eslint-plugin-react-native": "^2.3.2",
     "format-json": "^1.0.3",
@@ -43,7 +44,7 @@
     "moment": "^2.18.1",
     "normalizr": "^3.2.2",
     "numeral": "^2.0.6",
-    "prop-types": "^15.5.10",
+    "prop-types": "15.6",
     "querystringify": "0.0.4",
     "ramda": "^0.23.0",
     "react": "16.2.0",
@@ -51,7 +52,7 @@
     "react-native": "0.53",
     "react-native-animatable": "^1.1.0",
     "react-native-autogrow-textinput": "5.1.1",
-    "react-native-camera": "0.6",
+    "react-native-camera": "1.0.1",
     "react-native-device-info": "^0.10.0",
     "react-native-draftjs-render": "2.4.0",
     "react-native-drawer": "^2.3.0",
@@ -60,20 +61,20 @@
     "react-native-global-props": "^1.1.1",
     "react-native-google-places": "^2.4.2",
     "react-native-hockeyapp": "^0.5.1",
-    "react-native-htmlview": "^0.9.0",
+    "react-native-htmlview": "0.12.1",
     "react-native-image-picker": "^0.26.2",
     "react-native-img-cache": "^1.4.0",
-    "react-native-keyboard-spacer": "^0.3.1",
+    "react-native-keyboard-spacer": "0.4.1",
     "react-native-keyboard-tracking-view": "5.1.3",
-    "react-native-maps": "~0.13.0",
+    "react-native-maps": "0.20.1",
     "react-native-media-meta": "^0.0.10",
     "react-native-push-notification": "^2.2.1",
-    "react-native-router-flux": "https://github.com/rwoody/react-native-router-flux",
+    "react-native-router-flux": "3.43",
     "react-native-splash-screen": "^2.0.0",
     "react-native-vector-icons": "^4.0.0",
     "react-native-version-number": "^0.1.2",
     "react-native-webview-bridge-updated": "https://github.com/rwoody/react-native-webview-bridge#container-style",
-    "react-native-zss-rich-text-editor": "https://github.com/rwoody/react-native-zss-rich-text-editor#insert-video",
+    "react-native-zss-rich-text-editor": "1.1",
     "react-redux": "^5.0.2",
     "react-timer-mixin": "^0.13.3",
     "recompose": "^0.23.5",
