--- a/packages/HeroTravelerMobile/package.json
+++ b/packages/HeroTravelerMobile/package.json
@@ -53,7 +53,7 @@
     "react-native": "0.53",
     "react-native-animatable": "^1.1.0",
     "react-native-autogrow-textinput": "5.1.1",
-    "react-native-camera": "1.0",
+    "react-native-camera": "https://github.com/react-native-community/react-native-camera.git#f7f2ea5cc22e24468a36cc6bfcfeae6af69b02e0",
     "react-native-device-info": "^0.10.0",
     "react-native-draftjs-render": "2.4.0",
     "react-native-drawer": "^2.3.0",
