--- a/packages/HeroTravelerMobile/package.json
+++ b/packages/HeroTravelerMobile/package.json
@@ -75,6 +75,7 @@
     "react-native-splash-screen": "^2.0.0",
     "react-native-vector-icons": "^4.0.0",
     "react-native-version-number": "^0.1.2",
+    "react-native-video-processing": "^1.13.0",
     "react-native-webview-bridge-updated": "https://github.com/rwoody/react-native-webview-bridge#container-style",
     "react-native-zss-rich-text-editor": "1.1",
     "react-redux": "^5.0.2",
