--- a/packages/ht-core/package.json
+++ b/packages/ht-core/package.json
@@ -1,12 +1,15 @@
 {
   "name": "@hero/ht-core",
-  "version": "0.0.39",
+  "version": "0.0.40",
   "description": "HERO Traveler core server functions",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "clean": "rimraf dist",
     "build": "babel src -d dist && mkdir dist/utils/emailService/templates && cp -a src/utils/emailService/templates/. dist/utils/emailService/templates",
-    "publish:abeck": "yarn install && npm run clean && npm run build && npm publish --registry https://npm.abeck.io"
+    "publish:abeck": "yarn install && npm run clean && npm run build && npm publish --registry https://npm.abeck.io",
+    "publish:local": "npm run clean && npm run build && npm run copy-local:api && npm run copy-local:seeder",
+    "copy-local:api": "cp -r ./{dist,package.json} ../express-api/node_modules/@hero/ht-core",
+    "copy-local:seeder": "cp -r ./{dist,package.json} ../ht-seed-data/node_modules/@hero/ht-core"
   },
   "keywords": [],
   "author": "",
