--- a/packages/express-api/.env.example
+++ b/packages/express-api/.env.example
@@ -22,6 +22,7 @@ ALGOLIA_API_KEY='{apiKey}'
 ALGOLIA_USER_INDEX='{userIndex}'
 ALGOLIA_STORY_INDEX='{storyIndex}'
 ALGOLIA_CATEGORY_INDEX='{categoryIndex}'
+ALGOLIA_HASHTAG_INDEX='{hashtagIndex}'
 
 GOOGLE_API_KEY='{googleApiKey}'
 API_HOST="{ht url or ngrok url for testing}"
