--- a/packages/ht-seed-data/package.json
+++ b/packages/ht-seed-data/package.json
@@ -13,7 +13,6 @@
     "postinstall": "mkdir -p dist/category_images dist/story_images"
   },
   "devDependencies": {
-    "@hero/ht-core": "*",
     "babel-cli": "^6.24.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-polyfill": "^6.23.0",
@@ -27,5 +26,8 @@
     "rimraf": "^2.6.1",
     "sharp": "^0.17.2",
     "string": "^3.3.3"
+  },
+  "dependencies": {
+    "@hero/ht-core": "0.0.54"
   }
 }
