--- a/packages/HeroTravelerMobile/ios/Podfile
+++ b/packages/HeroTravelerMobile/ios/Podfile
@@ -9,7 +9,7 @@ target 'HeroTravelerMobile' do
   pod 'GoogleMaps'
   pod 'GooglePlacePicker'
 
-  pod 'SDWebImage'
+  pod 'SDWebImage', :git => 'https://github.com/rehashstudio/SDWebImage.git', :commit => '705cab1b7fbafb661d4476e05cf6a98e31ab7793'
   pod 'FLAnimatedImage'
 
   pod "HockeySDK", :subspecs => ['AllFeaturesLib']
