--- a/packages/HeroTravelerMobile/package.json
+++ b/packages/HeroTravelerMobile/package.json
@@ -42,6 +42,7 @@
     "immutable": "3.7.6",
     "keymirror": "0.1.1",
     "lodash": "^4.17.2",
+    "memoize-one": "^3.1.1",
     "moment": "^2.18.1",
     "normalizr": "^3.2.2",
     "numeral": "^2.0.6",
