--- a/packages/HeroTravelerMobile/package.json
+++ b/packages/HeroTravelerMobile/package.json
@@ -73,6 +73,7 @@
     "react-native-push-notification": "^2.2.1",
     "react-native-router-flux": "3.43",
     "react-native-splash-screen": "^2.0.0",
+    "react-native-swipeout": "^2.3.3",
     "react-native-vector-icons": "^4.0.0",
     "react-native-version-number": "^0.1.2",
     "react-native-video-processing": "^1.13.0",
