--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -6,6 +6,7 @@
     "algoliasearch": "^3.24.8",
     "algoliasearch-helper": "^2.23.2",
     "apisauce": "^0.14.1",
+    "draft-js": "^0.10.5",
     "history": "^4.7.2",
     "lodash": "^4.17.4",
     "material-ui": "^0.19.1",
