--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -41,7 +41,8 @@
     "redux-saga": "^0.14.3",
     "reduxsauce": "^0.4.1",
     "seamless-immutable": "^7.1.2",
-    "styled-components": "^2.1.1"
+    "styled-components": "^2.1.1",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
