--- a/packages/HeroTravelerMobile/ios/HeroTravelerMobile/HeroTravelerMobile.entitlements
+++ b/packages/HeroTravelerMobile/ios/HeroTravelerMobile/HeroTravelerMobile.entitlements
@@ -6,8 +6,8 @@
 	<string>development</string>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
-		<string>herotraverlermobile.app.link</string>
-		<string>herotraverlermobile-alternate.app.link</string>
+		<string>herotravelermobile.app.link</string>
+		<string>herotravelermobile-alternate.app.link</string>
 	</array>
 </dict>
 </plist>
