--- a/packages/HeroTravelerMobile/ios/HeroTravelerMobile/Info.plist
+++ b/packages/HeroTravelerMobile/ios/HeroTravelerMobile/Info.plist
@@ -129,7 +129,7 @@
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 	<key>branch_app_domain</key>
-	<string>herotraverlermobile.app.link</string>
+	<string>herotravelermobile.app.link</string>
 	<key>branch_key</key>
 	<string>key_live_lft20CIVGljfBknhjoHmiedaBFkaCTcg</string>
 </dict>
