--- a/packages/HeroTravelerMobile/android/app/build.gradle
+++ b/packages/HeroTravelerMobile/android/app/build.gradle
@@ -166,6 +166,8 @@ dependencies {
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:$supportLibVersion"
     compile "com.facebook.react:react-native:+"  // From node_modules
+
+    compile('com.facebook.android:facebook-android-sdk:4.+')
 }
 
 // Run this once to be able to run the application with BUCK
