--- a/packages/HeroTravelerMobile/android/app/build.gradle
+++ b/packages/HeroTravelerMobile/android/app/build.gradle
@@ -166,6 +166,7 @@ dependencies {
     compile project(':react-native-device-info')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:$supportLibVersion"
+    compile "com.android.support:support-compat:$supportLibVersion"
     compile "com.facebook.react:react-native:+"  // From node_modules
 
     compile('com.facebook.android:facebook-android-sdk:4.+')
