--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -49,8 +49,8 @@
     "build": "npm run share && react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "share": "rimraf src/App/shared && mkdir src/App/Shared && cpx \"../shared/**/*.{ts,tsx,js,jsx,json,ttf,png,svg}\" src/App/shared",
-    "share:watch": "rimraf src/App/Shared && mkdir src/App/Shared && cpx \"../shared/**/*.{ts,tsx,js,jsx,json,ttf,png,svg}\" src/App/Shared --watch"
+    "share": "rimraf src/App/shared && mkdir src/App/Shared && cpx \"../shared/**/*.{ts,tsx,js,jsx,json,ttf,png,svg,jpg}\" src/App/shared",
+    "share:watch": "rimraf src/App/Shared && mkdir src/App/Shared && cpx \"../shared/**/*.{ts,tsx,js,jsx,json,ttf,png,svg,jpg}\" src/App/Shared --watch"
   },
   "devDependencies": {
     "concurrently": "^3.5.0",
