--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -45,7 +45,7 @@
     "uuid": "^3.3.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3001 react-scripts start",
     "build": "npm run share && react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
