--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -25,6 +25,7 @@
     "react-google-maps": "next",
     "react-html5video": "^2.5.1",
     "react-image-cropper": "^1.1.1",
+    "react-infinite-scroller": "^1.2.2",
     "react-ios-switch": "^0.1.12",
     "react-modal": "^2.2.2",
     "react-onclickoutside": "^6.7.0",
