--- a/packages/HeroTravelerMobile/ios/HeroTravelerMobile/HeroTravelerMobile.entitlements
+++ b/packages/HeroTravelerMobile/ios/HeroTravelerMobile/HeroTravelerMobile.entitlements
@@ -3,11 +3,6 @@
 <plist version="1.0">
 <dict>
 	<key>aps-environment</key>
-	<string>development</string>
-	<key>com.apple.developer.associated-domains</key>
-	<array>
-		<string>herotravelermobile.app.link</string>
-		<string>herotravelermobile-alternate.app.link</string>
-	</array>
+	<string>production</string>
 </dict>
 </plist>
