--- a/packages/HeroTravelerMobile/ios/HeroTravelerMobile/HeroTravelerMobile.entitlements
+++ b/packages/HeroTravelerMobile/ios/HeroTravelerMobile/HeroTravelerMobile.entitlements
@@ -4,5 +4,12 @@
 <dict>
 	<key>aps-environment</key>
 	<string>production</string>
+	<key>com.apple.developer.associated-domains</key>
+	<array>
+		<string>applinks:herotravelermobile.app.link</string>
+		<string>applinks:herotravelermobile-alternate.app.link</string>
+		<string>applinks:herotravelermobile.test-app.link</string>
+		<string>applinks:herotravelermobile-alternate.test-app.link</string>
+	</array>
 </dict>
 </plist>
