--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -20,6 +20,7 @@
     "react": "^15.6.1",
     "react-cookie": "^2.1.1",
     "react-day-picker": "^7.0.6",
+    "react-display-name": "^0.2.4",
     "react-dom": "^15.6.1",
     "react-flexbox-grid": "^1.1.3",
     "react-google-maps": "next",
